infra/polybotInfra/polybot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
        - name: polybot
          image: docker.io/talsilbiger/polybotk:latest  # ✅ This will be updated automatically
          ports:
            - containerPort: 8443
