infra/polybotInfra/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: telegram-ingress

  namespace: default

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:

  ingressClassName: nginx

  rules:

    - host: tal-polybot-route53.devops-int-college.com

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: polybot

                port:

                  number: 8443
